--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-.idea
 npm-debug.log
-node_modules
-coverage
+.jshint*
 
+/node_modules
+/coverage
+/doc
+
+.idea
 .DS_Store
 */.DS_Store
 */*/.DS_Store
