--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "cross-env NODE_ENV=test mocha",
     "doc": "rimraf doc && groc && nyc --reporter=lcov npm test && rimraf .nyc_output",
     "lint": "standard --verbose | snazzy",
-    "validate": "npm test && npm ls",
+    "validate": "npm ling && npm test && npm ls",
     "dev:start": "nodemon server.js",
     "dev:debug": "iron-node server.js",
     "dev:test": "npm run test -- --watch"
@@ -58,7 +58,6 @@
   "dependencies": {
     "babel-core": "^6.4.5",
     "babel-eslint": "^6.0.0",
-    "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.5.0",
     "body-parser": "^1.10.0",
@@ -68,6 +67,7 @@
     "method-override": "^2.3.0",
     "morgan": "^1.5.0",
     "rimraf": "^2.5.2",
+    "snazzy": "^3.0.0",
     "standard": "^6.0.1"
   },
   "devDependencies": {
