--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "mocha": "^2.4.5",
     "nodemon": "^1.9.1",
     "nyc": "^6.1.1",
-    "precommit-hook": "^3.0.0"
+    "precommit-hook": "^3.0.0",
+    "supertest": "^1.2.0"
   },
   "directories": {
     "doc": "./doc",
