--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "babel-preset-stage-2": "^6.5.0",
     "body-parser": "^1.10.0",
     "colors": "^1.0.3",
+    "config": "^1.20.1",
     "cross-env": "^1.0.7",
     "express": "^4.10.4",
     "joi": "^8.0.5",
