--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "morgan": "^1.5.0",
     "rimraf": "^2.5.2",
     "snazzy": "^3.0.0",
-    "standard": "^6.0.1"
+    "standard": "^6.0.1",
+    "trumpet": "^1.7.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
