--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.5.0",
     "body-parser": "^1.10.0",
+    "chalk": "^1.1.3",
     "colors": "^1.0.3",
     "config": "^1.20.1",
     "cross-env": "^1.0.7",
@@ -74,6 +75,8 @@
     "joi": "^8.0.5",
     "method-override": "^2.3.0",
     "morgan": "^1.5.0",
+    "optimist": "^0.6.1",
+    "readline-sync": "^1.4.2",
     "rimraf": "^2.5.2",
     "snazzy": "^3.0.0",
     "standard": "^6.0.1",
