--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "chalk": "^1.1.3",
     "colors": "^1.0.3",
     "config": "^1.20.1",
+    "deep-equal": "^1.0.1",
     "express": "^4.10.4",
     "joi": "^8.0.5",
     "method-override": "^2.3.0",
