--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "myfox-wrapper-api",
   "version": "0.0.1",
-  "description": "API wrapper (through official API, with more features and tools) for MyFox domotics",
+  "description": "API wrapper (through official API, with more features and tools) for Myfox domotics",
   "author": "Xavier Gouley <gxapplications@gmail.com>",
   "contributors": [],
   "license": "MIT",
