--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "nyc": "^6.1.1",
     "precommit-hook": "^3.0.0",
     "rimraf": "^2.5.2",
+    "sinon": "^1.17.4",
     "standard": "^6.0.1",
     "supertest": "^1.2.0"
   },
