--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "colors": "^1.0.3",
     "config": "^1.20.1",
     "deep-equal": "^1.0.1",
+    "hapi": "^13.4.2",
     "joi": "^8.0.5",
     "optimist": "^0.6.1",
     "readline-sync": "^1.4.2",
