--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "colors": "^1.0.3",
     "config": "^1.20.1",
     "deep-equal": "^1.0.1",
-    "hapi": "^13.4.2",
     "joi": "^8.0.5",
     "optimist": "^0.6.1",
     "readline-sync": "^1.4.2",
@@ -91,6 +90,9 @@
     "express": "^4.10.4",
     "gh-pages": "^0.11.0",
     "groc": "^0.8.0",
+    "hapi": "^13.4.2",
+    "hoek": "^4.0.1",
+    "inert": "^4.0.1",
     "iron-node": "^2.2.16",
     "jsdoc": "^3.4.0",
     "method-override": "^2.3.0",
