--- a/package.json
+++ b/package.json
@@ -84,11 +84,13 @@
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
+    "blipp": "^2.3.0",
     "body-parser": "^1.10.0",
     "chai": "^3.5.0",
     "cross-env": "^1.0.7",
     "express": "^4.10.4",
     "gh-pages": "^0.11.0",
+    "good": "^7.0.1",
     "groc": "^0.8.0",
     "hapi": "^13.4.2",
     "hoek": "^4.0.1",
