--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "doc": "rimraf doc && jsdoc --package package.json --destination doc/jsdoc/ server/ lib/ && groc && cross-env NODE_ENV=test nyc --require babel-core/register --reporter=lcov mocha && rimraf .nyc_output",
     "doc:publish": "npm run doc && gh-pages -d doc",
     "lint": "standard --verbose | snazzy",
-    "validate": "npm ling && npm test && npm ls",
+    "validate": "npm run lint && npm test && npm ls",
     "dev:start": "nodemon server.js",
     "dev:test": "npm run test -- --watch",
     "debug:start": "iron-node server.js",
@@ -93,6 +93,7 @@
     "good": "^7.0.1",
     "groc": "^0.8.0",
     "hapi": "^13.4.2",
+    "hapi-method-change": "^1.0.0",
     "hoek": "^4.0.1",
     "inert": "^4.0.1",
     "iron-node": "^2.2.16",
