--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myfox-wrapper-api",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "description": "API wrapper (through official API, with more features and tools) for Myfox domotics",
   "author": "Xavier Gouley <gxapplications@gmail.com>",
   "contributors": [],
@@ -73,6 +73,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.5.0",
     "chalk": "^1.1.3",
+    "clone-deep": "^0.2.4",
     "colors": "^1.0.3",
     "config": "^1.20.1",
     "deep-equal": "^1.0.1",
